add html code from client

--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 
 	<body>
 
+		<div style="border: 3px solid #ff0000; background-color: #ffffff; border-radius: 30px; width:100%; max-width: 1170px; height: 200px; margin-top: 27px; margin-bottom: 27px; margin-left: auto; margin-right: auto; padding: 25px; text-align: left; font-family: Roboto, Helvetica Neue, Arial, sans-serif;">
+			<div class="container">
+				 <div class="row">
+				   <div class="col-sm-4"></div>
+				    <div class="col-sm-1"></div>
+				     <div class="col-sm-4">
+				       <a href="https://maskidosportu.pl/maski-antysmogowe-do-sportu/maska-antysmogowa-ozone-sport-carbon" style="text-align: center"><img src="http://maskidosportu.pl/img/promocja-dnia.jpg" title="Promocja Dnia" alt="Produkt dnia"></a>
+				     </div>
+				     <div class="col-sm-3">
+				      <p style="color: #3c3c3c; font-size: 18px; line-height: 22px;">Maska antysmogowa Ozone Sport Carbon</p>
+							<p style="color: #2c991a; font-size: 24px; line-height: 27px; font-weight: bold; margin-top: 10px; margin-bottom: 20px;">109,00 zł
+								<span style="color: #3c3c3c; font-size: 18px; margin-left: 20px;"><strike>159,00 zł</strike></span>
+							</p>
+							<a href="https://maskidosportu.pl/maski-antysmogowe-do-sportu/maska-antysmogowa-ozone-sport-carbon"><button class="button-promocja">Zobacz produkt</button></a>
+				     </div>
+				</div>
+			</div>
+		</div>
 
 	</body>
 </html>
