edit code of main box

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
 	<body>
 
-		<div style="border: 3px solid #ff0000; background-color: #ffffff; border-radius: 30px; width:100%; max-width: 1170px; height: 200px; margin-top: 27px; margin-bottom: 27px; margin-left: auto; margin-right: auto; padding: 25px; text-align: left; font-family: Roboto, Helvetica Neue, Arial, sans-serif;">
-			<div class="container">
+			<div class="container promotion-box">
 				 <div class="row">
 				   <div class="col-sm-4"></div>
 				    <div class="col-sm-1"></div>
@@ -28,7 +27,6 @@
 				     </div>
 				</div>
 			</div>
-		</div>
 
 	</body>
 </html>
