add css from index.html to style file

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 				       <a href="https://maskidosportu.pl/maski-antysmogowe-do-sportu/maska-antysmogowa-ozone-sport-carbon" style="text-align: center"><img src="http://maskidosportu.pl/img/promocja-dnia.jpg" title="Promocja Dnia" alt="Produkt dnia"></a>
 				     </div>
 				     <div class="col-sm-3">
-				      <p style="color: #3c3c3c; font-size: 18px; line-height: 22px;">Maska antysmogowa Ozone Sport Carbon</p>
-							<p style="color: #2c991a; font-size: 24px; line-height: 27px; font-weight: bold; margin-top: 10px; margin-bottom: 20px;">109,00 zł
-								<span style="color: #3c3c3c; font-size: 18px; margin-left: 20px;"><strike>159,00 zł</strike></span>
+				      <p class="promotion-tile">Maska antysmogowa Ozone Sport Carbon</p>
+							<p class="promotion-new-price">109,00 zł
+								<span class="promotion-old-price">159,00 zł</span>
 							</p>
-							<a href="https://maskidosportu.pl/maski-antysmogowe-do-sportu/maska-antysmogowa-ozone-sport-carbon"><button class="button-promocja">Zobacz produkt</button></a>
+							<a href="https://maskidosportu.pl/maski-antysmogowe-do-sportu/maska-antysmogowa-ozone-sport-carbon"><button class="promotion-button">Zobacz produkt</button></a>
 				     </div>
 				</div>
 			</div>
