--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				       <a href="https://maskidosportu.pl/maski-antysmogowe-do-sportu/maska-antysmogowa-ozone-sport-carbon" style="text-align: center"><img src="http://maskidosportu.pl/img/promocja-dnia.jpg" title="Promocja Dnia" alt="Produkt dnia"></a>
 				     </div>
 				     <div class="col-sm-3">
-				      <p class="promotion-tile">Maska antysmogowa Ozone Sport Carbon</p>
+				      <p class="promotion-title">Maska antysmogowa Ozone Sport Carbon</p>
 							<p class="promotion-new-price">109,00 zł
 								<span class="promotion-old-price">159,00 zł</span>
 							</p>
