--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 		<title>Timer section</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
-
+		<script type="text/javascript" src="./js/jdoom.min.js"></script>
+		<script type="text/javascript" src="./js/timer.js"></script>
 	</head>
 
 	<body>
