--- a/index.html
+++ b/index.html
@@ -14,7 +14,22 @@
 
 			<div class="container promotion-box">
 				 <div class="row">
-				   <div class="col-sm-4"></div>
+				   <div class="col-sm-4">
+						 <div class="row">
+							 <div class="col-sm-4">
+								 <span id="hours_pst"></span>
+								 <span class="time-name">godzin</span>
+							 </div>
+							 <div class="col-sm-4">
+								 <span id="mins_pst"></span>
+								 <span class="time-name">minut</span>
+							 </div>
+							 <div class="col-sm-4">
+								 <span id="secs_pst"></span>
+								 <span class="time-name">sekund</span>
+							 </div>
+						 </div>
+					 </div>
 				    <div class="col-sm-1"></div>
 				     <div class="col-sm-4">
 				       <a href="https://maskidosportu.pl/maski-antysmogowe-do-sportu/maska-antysmogowa-ozone-sport-carbon" style="text-align: center"><img src="http://maskidosportu.pl/img/promocja-dnia.jpg" title="Promocja Dnia" alt="Produkt dnia"></a>
