center text and add top padding in timer

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<div class="container promotion-box">
 				 <div class="row">
 				   <div class="col-sm-4">
-						 <div class="row">
+						 <div class="row timer">
 							 <div class="col-sm-4">
 								 <span id="hours_pst"></span>
 								 <span class="time-name">godzin</span>
