--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
 		<script type="text/javascript" src="./js/jdoom.min.js"></script>
 		<script type="text/javascript" src="./js/timer.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+		<script type="text/javascript" src="./js/jquery.lettering.js"></script>
 	</head>
 
 	<body>
