--- a/index.html
+++ b/index.html
@@ -8,26 +8,22 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap-grid.min.css">
 		<script type="text/javascript" src="./js/jdoom.min.js"></script>
 		<script type="text/javascript" src="./js/timer.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-		<script type="text/javascript" src="./js/jquery.lettering.js"></script>
 	</head>
-
 	<body>
-
 			<div class="container promotion-box">
 				 <div class="row">
 				   <div class="col-sm-4">
 						 <div class="row timer">
-							 <div class="col-sm-4">
-								 <span id="hours_pst"></span>
+							 <div class="col-sm-4 demo"id="demo1">
+								 <h1 class="time-number" id="hours_pst"></h1>
 								 <span class="time-name">godzin</span>
 							 </div>
 							 <div class="col-sm-4">
-								 <span id="mins_pst"></span>
+								 <span class="time-number" id="mins_pst"></span>
 								 <span class="time-name">minut</span>
 							 </div>
 							 <div class="col-sm-4">
-								 <span id="secs_pst"></span>
+								 <span class="time-number" id="secs_pst"></span>
 								 <span class="time-name">sekund</span>
 							 </div>
 						 </div>
@@ -45,6 +41,5 @@
 				     </div>
 				</div>
 			</div>
-
 	</body>
 </html>
