--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				   <div class="col-sm-4">
 						 <div class="row timer">
 							 <div class="col-sm-4 demo"id="demo1">
-								 <h1 class="time-number" id="hours_pst"></h1>
+								 <span class="time-number" id="hours_pst"></span>
 								 <span class="time-name">godzin</span>
 							 </div>
 							 <div class="col-sm-4">
