edit code for small devices

--- a/index.html
+++ b/index.html
@@ -12,27 +12,27 @@
 	<body>
 			<div class="container promotion-box">
 				 <div class="row">
-				   <div class="col-sm-4">
+				   <div class="col-sm-12 col-md-4">
 						 <div class="row timer">
-							 <div class="col-sm-4 demo"id="demo1">
+							 <div class="col-sm-4 col-4">
 								 <span class="time-number" id="hours_pst"></span>
 								 <span class="time-name">godzin</span>
 							 </div>
-							 <div class="col-sm-4">
+							 <div class="col-sm-4 col-4">
 								 <span class="time-number" id="mins_pst"></span>
 								 <span class="time-name">minut</span>
 							 </div>
-							 <div class="col-sm-4">
+							 <div class="col-sm-4 col-4">
 								 <span class="time-number" id="secs_pst"></span>
 								 <span class="time-name">sekund</span>
 							 </div>
 						 </div>
 					 </div>
-				    <div class="col-sm-1"></div>
-				     <div class="col-sm-4">
+				    <div class="col-sm-1 col-mobile"></div>
+				     <div class="col-sm-7 col-md-4">
 				       <a href="https://maskidosportu.pl/maski-antysmogowe-do-sportu/maska-antysmogowa-ozone-sport-carbon" style="text-align: center"><img src="http://maskidosportu.pl/img/promocja-dnia.jpg" title="Promocja Dnia" alt="Produkt dnia"></a>
 				     </div>
-				     <div class="col-sm-3">
+				     <div class="col-sm-5 col-md-3">
 				      <p class="promotion-title">Maska antysmogowa Ozone Sport Carbon</p>
 							<p class="promotion-new-price">109,00 zł
 								<span class="promotion-old-price">159,00 zł</span>
