change classes name

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script type="text/javascript" src="./js/timer.js"></script>
 	</head>
 	<body>
-			<div class="container promotion-box">
+			<div class="container sale-box">
 				 <div class="row">
 				   <div class="col-sm-12 col-md-4">
 						 <div class="row timer">
@@ -33,11 +33,11 @@
 				       <a href="https://maskidosportu.pl/maski-antysmogowe-do-sportu/maska-antysmogowa-ozone-sport-carbon" style="text-align: center"><img src="http://maskidosportu.pl/img/promocja-dnia.jpg" title="Promocja Dnia" alt="Produkt dnia"></a>
 				     </div>
 				     <div class="col-sm-5 col-md-3">
-				      <p class="promotion-title">Maska antysmogowa Ozone Sport Carbon</p>
-							<p class="promotion-new-price">109,00 zł
-								<span class="promotion-old-price">159,00 zł</span>
+				      <p class="sale-title">Maska antysmogowa Ozone Sport Carbon</p>
+							<p class="sale-new-price">109,00 zł
+								<span class="sale-old-price">159,00 zł</span>
 							</p>
-							<a href="https://maskidosportu.pl/maski-antysmogowe-do-sportu/maska-antysmogowa-ozone-sport-carbon"><button class="promotion-button">Zobacz produkt</button></a>
+							<a href="https://maskidosportu.pl/maski-antysmogowe-do-sportu/maska-antysmogowa-ozone-sport-carbon"><button class="sale-button">Zobacz produkt</button></a>
 				     </div>
 				</div>
 			</div>
